--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,6 @@ android {
 }
 
 dependencies {
-
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
@@ -37,4 +36,6 @@ dependencies {
     implementation project(path: ':OpenCV')
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.rmtheis:tess-two:9.1.0'
+    implementation 'com.google.android.material:material:1.5.0-alpha02'
 }
