--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,10 +32,13 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.navigation:navigation-fragment:2.3.5'
+    implementation 'androidx.navigation:navigation-ui:2.3.5'
     testImplementation 'junit:junit:4.+'
     implementation project(path: ':OpenCV')
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.rmtheis:tess-two:9.1.0'
     implementation 'com.google.android.material:material:1.5.0-alpha02'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
 }
