--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.navigation:navigation-fragment:2.3.5'
     implementation 'androidx.navigation:navigation-ui:2.3.5'
+    implementation files('libs/poishadow-all.jar')
     testImplementation 'junit:junit:4.+'
     implementation project(path: ':OpenCV')
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -41,4 +42,6 @@ dependencies {
     implementation 'com.rmtheis:tess-two:9.1.0'
     implementation 'com.google.android.material:material:1.5.0-alpha02'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation 'com.obsez.android.lib.filechooser:filechooser:1.2.0'
+    implementation 'com.google.code.gson:gson:2.8.8'
 }
