--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,9 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "30.0.0"
+    buildToolsVersion "31.0.0"
+
+
 
     defaultConfig {
         applicationId "com.example.amharicocr"
@@ -47,4 +49,6 @@ dependencies {
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
     implementation 'com.obsez.android.lib.filechooser:filechooser:1.2.0'
     implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'jp.wasabeef:richeditor-android:2.0.0'
+    implementation 'org.jsoup:jsoup:1.11.1'
 }
