--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "31.0.0"
+    buildToolsVersion "30.0.0"
 
 
 
@@ -51,4 +51,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'jp.wasabeef:richeditor-android:2.0.0'
     implementation 'org.jsoup:jsoup:1.11.1'
+    implementation 'androidx.preference:preference:1.0.0'
 }
